# api/controllers/user.js
@@ -10,8 +10,6 @@ var connection = mysql.createConnection({
     multipleStatements: true
 });
 
-
-
 connection.connect(function(err) {
     if (err) {
         console.error('error connecting: ' + err.stack);
@@ -25,8 +23,12 @@ module.exports = {
 
 function createUser(req, res) {
 
-    var values  = {nickname: req.body.userName, source: "application", password: req.body.userPassword, email: req.body.userEmail};
-     connection.query('insert into haydadb.users SET ?',values, function(err, rows, fields) {
+    var values  = {nickname: req.body.userName,
+                   source: "application",
+                   password: req.body.userPassword,
+                   email: req.body.userEmail};
+
+    connection.query('insert into haydadb.users SET ?',values, function(err, rows, fields) {
         if (!err)
             res.json(rows);
         else {
@@ -34,13 +36,9 @@ function createUser(req, res) {
             res.json('Error while performing Query.');
         }
     });
-
 }
 
-
-
 function getUserList(req, res) {
-
     if(req.swagger.params.userId.value){
         var id = req.swagger.params.userId.value;
         connection.query('select * from haydadb.users where id = ?', id, function(err, rows, fields) {
@@ -52,9 +50,7 @@ function getUserList(req, res) {
     }
 
     else if(req.swagger.params.userName.value){
-       var name = req.swagger.params.userName.value;
-
-
+        var name = req.swagger.params.userName.value;
         connection.query( "select * from haydadb.users where nickname like ?", '%' + name + '%', function(err, rows, fields) {
             if (!err)
                 res.json(rows);
@@ -64,7 +60,6 @@ function getUserList(req, res) {
             }
         });
     }
-
     else{
         connection.query('select * from haydadb.users', function(err, rows, fields) {
             if (!err)
@@ -73,5 +68,4 @@ function getUserList(req, res) {
                 res.json('Error while performing Query.');
         });
     }
-
 }
